[gd_scene load_steps=9 format=3 uid="uid://bs5pnnv5k17ao"]

[ext_resource type="Script" path="res://Objects/ScoreTileFSM.gd" id="1_4wq03"]
[ext_resource type="PackedScene" uid="uid://b5xshtev3l7ey" path="res://Objects/scoretile_fsm.tscn" id="2_6q1l5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v04qv"]
resource_local_to_scene = true
size = Vector2(9, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5pb3o"]
resource_local_to_scene = true
size = Vector2(40, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ef7xw"]
resource_local_to_scene = true
size = Vector2(9, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8nir"]
resource_local_to_scene = true
size = Vector2(40, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35qgv"]
size = Vector2(224, 224)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3f48n"]
resource_local_to_scene = true
size = Vector2(224, 224)

[node name="ScoreTile" type="CharacterBody2D"]
collision_layer = 4294967283
collision_mask = 0
motion_mode = 1
script = ExtResource("1_4wq03")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-16, -19, -14, -20, 14, -20, 16, -19, 19, -16, 20, -14, 20, 14, 19, 16, 16, 19, 14, 20, -14, 20, -16, 19, -19, 16, -20, 14, -20, -14, -19, -16)

[node name="Ray1" type="RayCast2D" parent="."]
target_position = Vector2(30, 0)
collision_mask = 9
collide_with_areas = true

[node name="Ray2" type="RayCast2D" parent="."]
target_position = Vector2(0, -30)
collision_mask = 9
collide_with_areas = true

[node name="Ray3" type="RayCast2D" parent="."]
target_position = Vector2(-30, 0)
collision_mask = 9
collide_with_areas = true

[node name="Ray4" type="RayCast2D" parent="."]
target_position = Vector2(0, 30)
collision_mask = 9
collide_with_areas = true

[node name="Shape1" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(25.5, 0)
shape = SubResource("RectangleShape2D_v04qv")
target_position = Vector2(0, 0)
collision_mask = 9

[node name="Shape2" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(0, -25.5)
shape = SubResource("RectangleShape2D_5pb3o")
target_position = Vector2(0, 0)
collision_mask = 9

[node name="Shape3" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(-25.5, 0)
shape = SubResource("RectangleShape2D_ef7xw")
target_position = Vector2(0, 0)
collision_mask = 9

[node name="Shape4" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(0, 25.5)
shape = SubResource("RectangleShape2D_i8nir")
target_position = Vector2(0, 0)
collision_mask = 9

[node name="PhysicsEnabler" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysicsEnabler"]
shape = SubResource("RectangleShape2D_35qgv")
metadata/_edit_lock_ = true

[node name="PhysicsEnabler2" type="ShapeCast2D" parent="."]
visible = false
enabled = false
shape = SubResource("RectangleShape2D_3f48n")
target_position = Vector2(0, 0)
max_results = 36
collision_mask = 2

[node name="FSM" parent="." instance=ExtResource("2_6q1l5")]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(2.1, 2.1)

[node name="Sprites" type="Node2D" parent="."]
visible = false

[connection signal="body_entered" from="PhysicsEnabler" to="." method="_on_physics_enabler_body_entered"]
[connection signal="body_exited" from="PhysicsEnabler" to="." method="_on_physics_enabler_body_exited"]
